--- a/Technical Documentation Page.css
+++ b/Technical Documentation Page.css
@@ -56,7 +56,7 @@ li{
     border-style: solid;
     border-width: 3px;
     border-color: black;
-    padding: 10px;
+    padding: 10px 30px;
 }
 
 .jsCode{
