small change to body - css

--- a/Technical Documentation Page.css
+++ b/Technical Documentation Page.css
@@ -3,11 +3,16 @@
     margin: 0;
 }
 
+body{
+    margin-top: -20px;
+}
+
 html {
     scroll-behavior: smooth;
   }
 
   .left_side{
+      padding-top: 20px;
       width: 20%;
       float: left;
   }
