removing border left

--- a/Technical Documentation Page.css
+++ b/Technical Documentation Page.css
@@ -124,6 +124,7 @@ hr.HrNav{
         #main-doc{
             background-color: lightcyan;
             margin-top: 290px;
+            border-left: none;
 
         }
     }
